syntax = "proto3";

package files.v1;

option go_package = "github.com/RA341/dockman/generated/files/v1";

service FileService {
  // root file management
  rpc Create(File) returns (Empty) {}
  rpc List(Empty) returns (ListResponse) {}
  rpc Delete(File) returns (Empty) {}
  rpc Exists(File) returns (Empty) {}
  rpc Rename(RenameFile) returns (Empty) {}
}

message ListResponse {
  repeated FileGroup groups = 1;
}

message FileGroup {
  string root = 1;
  repeated string subFiles = 2;
}

message RenameFile {
  string oldFilePath = 1;
  string newFilePath = 2;
}

message File {
  string filename = 1;
}

message Empty {}
